--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -2,3 +2,26 @@
     height: 100%;
     width: 100%;
 }
+.detail .movieDetail{
+    width: 100%;
+    padding: 30rpx 30rpx 0 30rpx;
+    box-sizing: border-box;
+}
+.detail .movieDetail .movTitle{
+    font-size: 40rpx;
+    margin-bottom: 10rpx;
+}
+.detail .movieDetail .mainBox{
+    width: 100%;
+    display: flex;
+    height: 300rpx;
+}
+.detail .movieDetail .mainBox .movDescr{
+    flex: 1;
+    height: 100%;
+}
+.detail .movieDetail .mainBox .movPic{
+    width: 180rpx;
+    height: 100%;
+    margin-left: 20px;
+}
